[project]
name = "agent-memory"
version = "0.1.0"
description = "Structured, temporal memory for AI agents."
readme = "README.md"
authors = [
    { name = "bartosz roguski", email = "bartosz.k.roguski@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.43.0",
    "sqlite-vec>=0.1.6",
]

[project.scripts]
agent-memory = "agent_memory:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 135

[tool.ruff.lint]
select = [
    "I",        # isort
    "ERA",      # dead code
    "F401",     # unused imports
    "E",        # pycodestyle error
    "W",        # pycodestyle warning
    "B",        # flake8-bugbear
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
