[project]
name = "memv"
version = "0.1.0"
description = "Structured, temporal memory for AI agents."
readme = "README.md"
license = "MIT"
authors = [
    { name = "bartosz roguski", email = "bartosz.k.roguski@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["ai", "agents", "memory", "llm", "rag", "temporal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.43.0",
    "sqlite-vec>=0.1.6",
    "textual>=3.5.0",
]

[project.scripts]
memv = "memv:main"

[project.urls]
Homepage = "https://github.com/vstorm-co/memv"
Documentation = "https://vstorm-co.github.io/memv/"
Repository = "https://github.com/vstorm-co/memv"
Issues = "https://github.com/vstorm-co/memv/issues"
Changelog = "https://github.com/vstorm-co/memv/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "ty>=0.0.1a7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.28",
]
examples = [
    "autogen-agentchat>=0.7",
    "autogen-ext[openai]>=0.7",
    "crewai>=0.11",
    "langchain-openai>=1.0",
    "langgraph>=1.0",
    "llama-index>=0.14",
    "llama-index-llms-openai>=0.6",
    "typer>=0.15",
]

[tool.ruff]
line-length = 135

[tool.ruff.lint]
select = [
    "I",        # isort
    "ERA",      # dead code
    "F401",     # unused imports
    "E",        # pycodestyle error
    "W",        # pycodestyle warning
    "B",        # flake8-bugbear
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
